Bug 400779 - Launch button for locally-installed packages doesn't work
Summary: Launch button for locally-installed packages doesn't work
Status: RESOLVED FIXED
Alias: None
Product: Discover
Classification: Applications
Component: PackageKit (other bugs)
Version First Reported In: unspecified
Platform: Neon Linux
: HI normal
Target Milestone: ---
Assignee: Aleix Pol
URL:
Keywords:
: 401467 405019 (view as bug list)
Depends on:
Blocks:
 
Reported: 2018-11-07 03:14 UTC by Patrick Silva
Modified: 2019-12-02 16:49 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
screenshot (59.38 KB, image/png)
2018-11-07 03:14 UTC, Patrick Silva
Details
attachment-28366-0.html (1.17 KB, text/html)
2019-11-07 14:20 UTC, Eric Malamisura
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2018-11-07 03:14:32 UTC
Created attachment 116140 [details]
screenshot

SUMMARY
"Launch" button appears in the header bar together "Remove" button immediately after I install some package from distro repos. However "Launch" button does not appear after Discover to install a DEB package.

STEPS TO REPRODUCE
1. install a DEB package with Discover
2. 
3. 

OBSERVED RESULT
after install process only "Remove" button appears in the header bar.
See the screenshot please.

EXPECTED RESULT
"Launch" and "Remove' buttons in the header bar.

SOFTWARE VERSIONS
KDE neon Developer Edition
KDE Plasma: 5.14.80
Qt: 5.11.2
KDE Frameworks: 5.52.0
Comment 1 Aleix Pol 2018-11-09 18:13:00 UTC
Git commit 1dd0e7478a9c41ab23eba18eee0327f6c355afc6 by Aleix Pol.
Committed on 09/11/2018 at 18:12.
Pushed by apol into branch 'master'.

pk: Make it possible to run applications installed from a file

M  +19   -0    libdiscover/backends/PackageKitBackend/LocalFilePKResource.cpp
M  +3    -0    libdiscover/backends/PackageKitBackend/LocalFilePKResource.h

https://commits.kde.org/discover/1dd0e7478a9c41ab23eba18eee0327f6c355afc6
Comment 2 Nate Graham 2018-11-27 21:31:57 UTC
*** Bug 401467 has been marked as a duplicate of this bug. ***
Comment 3 Patrick Silva 2018-11-27 21:59:13 UTC
On neon dev unstable "Launch" button is available but it does not launch the app when clicked.
Comment 4 Nate Graham 2019-03-08 00:04:02 UTC
*** Bug 405019 has been marked as a duplicate of this bug. ***
Comment 5 Bruno Funnie 2019-07-03 16:58:50 UTC
Same issue here, when installing a local package like Visual Studio code for example, when installing by Discover and when clicking in the Launch button nothing happens.

My KDE is the following (clean install):

> cat /etc/os-release 
NAME="KDE neon"
VERSION="5.16"
ID=neon
ID_LIKE="ubuntu debian"
PRETTY_NAME="KDE neon User Edition 5.16"
VARIANT="User Edition"
VERSION_ID="18.04"
HOME_URL="http://neon.kde.org/"
SUPPORT_URL="http://neon.kde.org/"
BUG_REPORT_URL="http://bugs.kde.org/"
LOGO=start-here-kde-neon
PRIVACY_POLICY_URL="https://www.ubuntu.com/legal/terms-and-policies/privacy-policy"
VERSION_CODENAME=bionic
UBUNTU_CODENAME=bionic
Comment 6 Eric Malamisura 2019-11-07 14:20:46 UTC
Created attachment 123772 [details]
attachment-28366-0.html

Yeah the Launch button is completely useless...I would say it doesn't work
about 90% of the time...

On Thu, Nov 7, 2019 at 9:16 AM Nate Graham <bugzilla_noreply@kde.org> wrote:

> https://bugs.kde.org/show_bug.cgi?id=400779
>
> Nate Graham <nate@kde.org> changed:
>
>            What    |Removed                     |Added
>
> ----------------------------------------------------------------------------
>           Component|discover                    |PackageKit
>                  CC|                            |aleixpol@kde.org
>
> --
> You are receiving this mail because:
> You are on the CC list for the bug.
Comment 7 Nate Graham 2019-11-07 14:22:22 UTC
If you're on openSUSE, that's a separate issue tracked with Bug 412986.
Comment 8 Aleix Pol 2019-12-02 16:49:21 UTC
Should be solved by now.

If it's still not working it's probably because the package doesn't have a .desktop file.