pk: Make it possible to run applications installed from a file

BUG: 400779